# HeartstringsResonance

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  sh.exe.stackdump
client/: main.cpp
client/audio/: BGM.cpp  BGM.h  audiomanager.cpp  audiomanager.h
client/component/: connectdialog.cpp  connectdialog.h  logindialog.cpp  logindialog.h  squarechart.cpp  squarechart.h
client/config/: globalconfig.cpp  globalconfig.h
client/graphics/: DEBUG.h  README.md  camera.h  gem.cpp  gem.h  gemmanager.cpp  gemmanager.h  gemmodelfactory.cpp  gemmodelfactory.h  graphicsthread.cpp  graphicsthread.h  hypercubethread.cpp  hypercubethread.h  mesh.cpp  mesh.h  model.cpp  model.h  rendermanager.cpp  rendermanager.h
client/graphics/animation/: animation.cpp  animation.h  animationfactory.cpp  animationfactory.h  animationfall.cpp  animationfall.h  animationremove.cpp  animationremove.h  animationswap.cpp  animationswap.h  animationwait.cpp  animationwait.h
client/windows/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  basewindow.cpp  basewindow.h  basewindow.ui  configwindow.cpp  configwindow.h  configwindow.ui  connectdialog.cpp  connectdialog.h  framelesswindow.cpp  framelesswindow.h  framelesswindow.ui  gamewindow.cpp  gamewindow.h  gamewindow.ui  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  memberwindow.cpp  memberwindow.h  memberwindow.ui  multiresultwindow.cpp  multiresultwindow.h  multiresultwindow.ui  pausewindow.cpp  pausewindow.h  pausewindow.ui  rankwindow.cpp  rankwindow.h  rankwindow.ui  resultwindow.cpp  resultwindow.h  resultwindow.ui  singlewindow.cpp  singlewindow.h  (+4 more)
code/: main.cpp
code/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
core/: board.cpp  board.h  gem.cpp  gem.h  gemmanager.h  player.h
doc/: 注册流程图 .vsdx  用例图.vsdx  登录流程图.vsdx
resource/: res.qrc  shaders.qrc
resource/models/gem/: 2.mtl  3.mtl  7.mtl  8.mtl  black.mtl  blue.mtl  diamond.mtl  doge.mtl  flower.mtl  hachimi.mtl  hou.mtl  love.mtl  pig.mtl  puper.mtl  yf.mtl  yuyu.mtl  zft.mtl
resource/shaders/: common.frag  shader_toy.frag  shader_toy.vert  shader_toy_MdXyzX.frag  shader_toy_Mll3zj.frag  shader_toy_Ms2SD1.frag  shader_toy_XXdSzN.frag  shader_toy_XsXXDn.frag  shader_toy_tllfRX.frag
server/: main.cpp
server/serve/: database.cpp  database.h  room.cpp  room.h  servergemmanager.h
server/windows/: mainwindow.cpp  mainwindow.h  mainwindow.ui
